@@ -15,6 +15,10 @@ Revision history for Fatal
 
 	* t/fork.t added, for testing autodying fork.
 
+        * The internal subroutine _remove_lexical_subs has been
+          renamed to a much less misleading name of _install_subs,
+          since that's what it actually does now.
+
 1.10_07  Sun Jun 29 15:54:26 AEST 2008
 	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
 	  of getting lexical replacement of subroutines working for real
